syntax = "proto3";

package player;

option go_package = "protos/pb/player";

message CreatePlayerRequest{
  string id =1;
  string first_name =2;
  string last_name =3;
  string gender =4;
  string marital_status =5;
  string email =6;
  string phone_number =7;
}

message Address{
  string personal_info_id =1;
  string name =2;
  string city =3;
  string zip_code =4;
}

message CreatePlayerFieldRequest{
  string id =1;
  string player_id =2;
  string year_of_experience =3;
  int32 number_of_goals =4;
  repeated string previous_clubs =5;
  int32  jersey_number =6;
  string year_joined =7;
  string position_on_the_field =8;
  string number_of_goals_scored =9;
  string player_status =10;
}

message GetPlayerByIdRequest{
  string id =1;
}

message UpdatePlayerPersonalInfoRequest{
  string id =1;
  string first_name =2;
  string last_name =3;
  string gender =4;
  string marital_status =5;
  string email =6;
  string phone_number =7;
}

message UpdateAddressRequest{
  string personal_info_id =1;
  string name =2;
  string city =3;
  string zip_code =4;
}

message GetPlayerByPhoneNumberRequest{
  string phone_number =1;
}

message GetPlayerUsingJerseyNumberRequest{
  string jersey_number =1;
}

message UpdatePlayerWithFieldDataRequest{
  string year_of_experience =2;
  int32 number_of_goals =3;
  repeated string previous_clubs =4;
  int32  jersey_number =5;
  string year_joined =6;
  string position_on_the_field =7;
  int32 number_of_goals_scored =8;
  string player_status =9;
  string personal_info_id =10;
}

message DeletePlayerRequest{
  string id =1;
}

message GetPlayerByIdResponse{
  string first_name =1;
  string last_name =2;
  string gender =3;
  string marital_status =4;
  string email =5;
  string phone_number =6;
  string year_of_experience =7;
  string number_of_goals =8;
  int32  jersey_number =10;
  string year_joined =11;
  string position_on_the_field =12;
  int32 number_of_goals_scored =13;
  string player_status =14;
}

message HealthStatusResponse{
  string date_sustained_injury =2;
  string date_predicted_to_be_fine =3;
  string injury_status =4;
  string health_status =5;
}

message SalaryResponse{
  int32 weeklySalary =1;
  int32 bonus =2;
  string  salary_status =3;
  string bonus_status =4;
}


message Empty{
}


service PlayerService{
  rpc CreatePlayer(CreatePlayerRequest) returns(Empty);
  rpc GetPlayerById(GetPlayerByIdRequest) returns(GetPlayerByIdResponse);
  rpc GetPlayerByPhoneNumber(GetPlayerByPhoneNumberRequest) returns (GetPlayerByIdResponse);
  rpc UpdatePlayerPersonalInfo(UpdatePlayerPersonalInfoRequest) returns (Empty);
  rpc UpdateAddress(UpdateAddressRequest) returns (Empty);
  rpc CreatePlayerWithFieldData(CreatePlayerFieldRequest) returns (Empty);
  rpc GetPlayerByJerseyNumber(GetPlayerUsingJerseyNumberRequest) returns (GetPlayerByIdResponse);
  rpc UpdatePayerWithFieldData(UpdatePlayerWithFieldDataRequest) returns (Empty);
  rpc DeletePlayer(DeletePlayerRequest) returns (Empty);
}


